[gd_scene load_steps=10 format=3 uid="uid://b1o4y5r5y3ugo"]

[ext_resource type="Script" path="res://Player/Player_Pawn.gd" id="1_8eb2m"]
[ext_resource type="Texture2D" uid="uid://cxkp6yw0pkg8p" path="res://Assets_Sprites/Buildings/Player_Base.png" id="2_dy73k"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fmxek"]
radius = 8.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g67d0"]
radius = 12.0
height = 48.0

[sub_resource type="Animation" id="Animation_rpw8v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../S_Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_lwnbj"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../S_Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_i67hq"]
resource_name = "melle_attack1"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../S_Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.2001, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 42, 43, 44]
}

[sub_resource type="Animation" id="Animation_qxrw6"]
resource_name = "walk_side"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../S_Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 3, 2, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w7bq3"]
_data = {
"RESET": SubResource("Animation_rpw8v"),
"idle": SubResource("Animation_lwnbj"),
"melle_attack1": SubResource("Animation_i67hq"),
"walk_side": SubResource("Animation_qxrw6")
}

[node name="PlayerPawn" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_8eb2m")

[node name="CS_player" type="CollisionShape2D" parent="." groups=["player"]]
position = Vector2(0, -9.53674e-07)
scale = Vector2(0.336368, -0.171214)
shape = SubResource("CapsuleShape2D_fmxek")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="A_DamageBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="A_DamageBox"]
position = Vector2(20, 0)
shape = SubResource("CapsuleShape2D_g67d0")

[node name="S_Player" type="Sprite2D" parent="."]
position = Vector2(0, -32)
texture = ExtResource("2_dy73k")
hframes = 20
vframes = 20

[node name="AnimationTree" type="AnimationTree" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationTree")
libraries = {
"": SubResource("AnimationLibrary_w7bq3")
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
